<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Komi</string>
    <string name="slogan">¡Explora historias a tu manera!</string>
    <string name="text_start">Empezar</string>
    <string name="google">Google</string>
    <string name="textContrasena">Contraseña</string>
    <string name="textConfirmPassword">Confirmar contraseña</string>
    <string name="textEmail">Correo electrónico</string>
    <string name="textContinueGoogle">Continuar con Google</string>
    <string name="textSloganLogin">Inicia sesión y deja que las historietas te lleven más allá.</string>
    <string name="textWelcome">¡Sumergete en la zona de lectura! 📖🚀 </string>
    <string name="textSwitch">¿Quieres ser proveedor y subir mangas/cómics? (Pendiente de aprobación)</string>
    <string name="textSloganRegister">Una experiencia personalizada</string>
    <string name="textProfile">Configuración</string>
    <string name="textButtonLogin">Iniciar sesión</string>
    <string name="textForgotPassword">¿Olvidaste tu contraseña?</string>
    <string name="textRegisterGoogle">Registrate con Google</string>
    <string name="textO">o</string>
    <string name="precio_soles">S/ %.2f</string>
    <string name="textRegister">Registrate y comienza a leer</string>
    <string name="textDni">DNI</string>
    <string name="txtApellidos">Apellidos</string>
    <string name="txtNombres">Nombres</string>
    <string name="textSloganRegister2">Únete a la zona geek</string>
    <string name="textFechaNacimiento">Fecha de nacimiento</string>
    <string name="server_client_id">tu_client_id_google</string>
    <string name="textTYC">Sí, he leído y acepto los términos de servicio y política de privacidad.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_select_register">SelectRegisterActivity</string>
    <string name="title_activity_button_navigation">ButtonNavigationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="add_to_google_wallet_button_content_description">Agregar a Google Wallet</string>
    <string name="book_image_description">Descripción de la imagen del libro</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!-- Wallet activity -->
    <string name="title_activity_wallet">WalletActivity</string>
    <string name="sample_pass" translatable="false">Sample Pass</string>
    <string name="google_wallet_status_unavailable" translatable="false">Unfortunately, Google
        Wallet is not available on this phone.
    </string>
    <string name="add_google_wallet_success" translatable="false">The pass was added successfully!
    </string>
    <string name="add_google_wallet_cancelled" translatable="false">The user cancelled adding the
        pass to Google Wallet.
    </string>
    <string name="add_google_wallet_unknown_error" translatable="false">An unknown error occurred
        when adding pass to Google Wallet.
    </string>
    <string name="price">S/.00.00</string>
    <string name="textQuestionDescription">¿De qué se trata?</string>
    <string name="hint_search">Buscar historietas...</string>
    <string name="home_title">Empieza tu aventura</string>
    <string name="home_subtitle">Explora mangas, cómics y más...</string>
    <string name="provider_welcome_title">Bienvenido, proveedor</string>
    <string name="provider_date_sample">Lunes, 27 de Mayo de 2025</string>
    <string name="provider_active_label">Activas</string>
    <string name="provider_pending_label">Pendientes</string>
    <string name="provider_my_publications">Mis publicaciones</string>
    <string name="comic_title_sample">Batman: Kill the Joke</string>
    <string name="chip_trending">#1 Trending</string>
    <string name="chip_most_read">Más leído</string>
    <string name="synopsis_label">Sinopsis</string>
    <string name="comic_price_sample">$3.99</string>
    <string name="comic_synopsis_sample">Una historia oscura y cautivadora que explora los orígenes retorcidos del Joker. Tras un trágico accidente que transforma a un comediante en el villano más temido de Gotham, busca demostrar que un mal día puede cambiarlo todo.</string>
    <string name="tab_chapters">Capítulos</string>
    <string name="tab_details">Detalles</string>
    <string name="fab_read">Leer</string>
    <string name="reader_toolbar_title">Kill The Joke</string>
    <string name="reader_toolbar_subtitle">Vol 1  |  Issue #12</string>
    <string name="reader_page_current">1</string>
    <string name="reader_page_total">0</string>
    <string name="reader_loading">Cargando...</string>
    <string name="admin_dashboard_title">Dashboard</string>
    <string name="admin_dashboard_username">Javier Rojas</string>
    <string name="admin_dashboard_date">sábado, 24 de mayo de 2025</string>
    <string name="admin_dashboard_providers">Proveedores</string>
    <string name="admin_dashboard_publications">Publicaciones</string>
    <string name="admin_dashboard_recent_requests">Solicitudes recientes</string>

    <!-- Manga register strings -->
    <string name="manga_register_title">PUBLICAR MANGA</string>
    <string name="manga_register_cover_desc">Portada del manga</string>
    <string name="manga_register_choose_image">Elegir imagen</string>
    <string name="manga_register_upload_zip">Subir ZIP</string>
    <string name="manga_register_no_file">Ningún archivo seleccionado</string>
    <string name="manga_register_hint_title">Título del manga *</string>
    <string name="manga_register_hint_authors">Autor(es) *</string>
    <string name="manga_register_add_more">+ agregar más</string>
    <string name="manga_register_hint_year">Año publicación</string>
    <string name="manga_register_hint_chapters">Capítulos</string>
    <string name="manga_register_hint_price">Precio S/.</string>
    <string name="manga_register_hint_isbn">ISBN</string>
    <string name="manga_register_hint_age">Restricción edad</string>
    <string name="manga_register_hint_editorial">Editorial</string>
    <string name="manga_register_choose_genre">Elige género</string>
    <string name="manga_register_hint_description">Descripción sobre el manga *</string>
    <string name="manga_register_cancel">Cancelar</string>
    <string name="manga_register_save">guardar</string>
    <string name="mis_solicitudes_title">Mis solicitudes</string>
    <string name="profile_title">Mi perfil</string>
    <string name="profile_name_sample">Mangas y Comics</string>
    <string name="profile_email_sample">comics@gmail.com</string>
    <string name="profile_become_provider">Convertirse en proveedor</string>
    <string name="profile_logout">Cerrar sesión</string>
</resources>