<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SelectRegisterActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lblBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sourcesans3_black"
        android:text="@string/textRegister"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/lblText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lblText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sourcesans3_regular"
        android:text="@string/textSloganRegister"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btnGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblBienvenido" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/sourcesans3_extrabold"
        app:icon="@drawable/ico_google"
        app:iconSize="20dp"
        app:iconGravity= "textStart"
        android:text="@string/textRegisterGoogle"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGoogle"
        app:layout_constraintBottom_toTopOf="@id/btnCorreo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCorreo"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/sourcesans3_extrabold"
        app:icon="@drawable/ico_email"
        app:iconSize="20dp"
        app:iconGravity= "textStart"
        android:textSize="18sp"
        android:text="@string/textEmail"
        app:layout_constraintBottom_toTopOf="@id/lblRedLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView7" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lblRedLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
